examples/test/testpolicy10666.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10666
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key45: value14
      key25: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value21
          key29: value23
          key44: value44
      podSelector:
        matchLabels:
          key37: value16
          key31: value38
          key44: value22
